.jjconflict-base-0/apps/mautrix/discord/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mautrix-discord-tailscale
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mautrix-discord
      app.kubernetes.io/name: mautrix-discord
  policyTypes:
    - Ingress
